@@ -35,6 +35,8 @@ Improvements
   was essentially a clone of MultiTermQuery#CONSTANT_SCORE_REWRITE). It uses the new CONSTANT_SCORE_BLENDED_REWRITE
   by default, but can be overridden through the constructor. (Greg Miller)
 
+* GITHUB#12175: Remove SortedSetDocValuesSetQuery in favor of TermInSetQuery with DocValuesRewriteMethod. (Greg Miller)
+
 Optimizations
 ---------------------
 
